--- a/src/com/sys/automacao/comercial/view/Principal.fxml
+++ b/src/com/sys/automacao/comercial/view/Principal.fxml
@@ -34,7 +34,7 @@
             	</Menu>
             	<Menu mnemonicParsing="false" text="Configuração">
               		<items>
-                		<MenuItem mnemonicParsing="false" text="About" />
+                		<MenuItem mnemonicParsing="false" text="Sobre" />
               		</items>
             	</Menu>
           	</menus>
