--- a/src/com/sys/automacao/comercial/view/Usuario.fxml
+++ b/src/com/sys/automacao/comercial/view/Usuario.fxml
@@ -16,48 +16,48 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
-      <JFXTextField fx:id="idMatricula" layoutX="51.0" layoutY="45.0" prefHeight="25.0" prefWidth="187.0" />
+      <JFXTextField fx:id="tfMatricula" layoutX="51.0" layoutY="45.0" prefHeight="25.0" prefWidth="187.0" />
       
       <Label layoutX="266.0" layoutY="29.0" text="Nome*">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
-      <JFXTextField fx:id="idNome" layoutX="266.0" layoutY="45.0" prefHeight="25.0" prefWidth="433.0" />
+      <JFXTextField fx:id="tfNome" layoutX="266.0" layoutY="45.0" prefHeight="25.0" prefWidth="433.0" />
       
       <Label layoutX="51.0" layoutY="101.0" text="Senha*">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
-      <JFXTextField fx:id="idSenha" layoutX="51.0" layoutY="118.0" prefHeight="25.0" prefWidth="187.0" />
+      <JFXTextField fx:id="tfSenha" layoutX="51.0" layoutY="118.0" prefHeight="25.0" prefWidth="187.0" />
       
       <Label layoutX="266.0" layoutY="101.0" text="E-mail*">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
-      <JFXTextField fx:id="idEmail" layoutX="266.0" layoutY="117.0" prefHeight="25.0" prefWidth="433.0" />
+      <JFXTextField fx:id="tfEmail" layoutX="266.0" layoutY="117.0" prefHeight="25.0" prefWidth="433.0" />
       
       <Label layoutX="52.0" layoutY="171.0" text="Status*">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
-      <JFXComboBox fx:id="idStatus" layoutX="51.0" layoutY="191.0" prefHeight="25.0" prefWidth="187.0" />
+      <JFXComboBox fx:id="cbStatus" layoutX="51.0" layoutY="191.0" prefHeight="25.0" prefWidth="187.0" />
 
       <Label layoutX="266.0" layoutY="171.0" text="Nivel*">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
-      <JFXComboBox fx:id="idNivel" layoutX="266.0" layoutY="191.0" prefHeight="25.0" prefWidth="236.0" />
+      <JFXComboBox fx:id="cbNivel" layoutX="266.0" layoutY="191.0" prefHeight="25.0" prefWidth="236.0" />
       
-      <JFXButton fx:id="idSalvar" layoutX="140.0" layoutY="294.0" prefHeight="61.0" prefWidth="178.0" style="-fx-border-width: 3; -fx-border-color: BLACK; -fx-border-radius: 5;" text="SALVAR">
+      <JFXButton fx:id="butSalvar" layoutX="140.0" layoutY="294.0" prefHeight="61.0" prefWidth="178.0" style="-fx-border-width: 3; -fx-border-color: BLACK; -fx-border-radius: 5;" text="SALVAR">
          <font>
             <Font name="System Bold" size="18.0" />
          </font></JFXButton>
-      <JFXButton fx:id="idSair" layoutX="389.0" layoutY="294.0" onAction="#handleSair" prefHeight="61.0" prefWidth="178.0" style="-fx-border-width: 3; -fx-border-color: BLACK; -fx-border-radius: 5;" text="SAIR">
+      <JFXButton fx:id="butSair" layoutX="389.0" layoutY="294.0" onAction="#handleSair" prefHeight="61.0" prefWidth="178.0" style="-fx-border-width: 3; -fx-border-color: BLACK; -fx-border-radius: 5;" text="SAIR">
          <font>
             <Font name="System Bold" size="18.0" />
          </font></JFXButton>
