--- a/src/com/sys/automacao/comercial/view/UsuarioListar.fxml
+++ b/src/com/sys/automacao/comercial/view/UsuarioListar.fxml
@@ -54,7 +54,7 @@
 						<Font name="System Bold" size="14.0" />
 					</font>
 				</Button>
-				<Button layoutX="396.6" layoutY="47.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="136.0" text="APAGAR">
+				<Button layoutX="396.6" layoutY="47.0" mnemonicParsing="false" onAction="#handleDeletar" prefHeight="44.0" prefWidth="136.0" text="APAGAR">
 					<font>
 						<Font name="System Bold" size="14.0" />
 					</font>
