--- a/src/com/sys/automacao/comercial/view/Usuario.fxml
+++ b/src/com/sys/automacao/comercial/view/Usuario.fxml
@@ -53,11 +53,16 @@
       </Label>
       <JFXComboBox fx:id="cbNivel" layoutX="266.0" layoutY="191.0" prefHeight="25.0" prefWidth="236.0" />
       
-      <JFXButton fx:id="butSalvar" layoutX="140.0" layoutY="267.0" onAction="#handleSalvar" prefHeight="61.0" prefWidth="178.0" style="-fx-border-width: 3; -fx-border-color: BLACK; -fx-border-radius: 5;" text="SALVAR">
+      <JFXButton fx:id="butSalvar" layoutX="40.0" layoutY="267.0" onAction="#handleSalvar" prefHeight="61.0" prefWidth="178.0" style="-fx-border-width: 3; -fx-border-color: BLACK; -fx-border-radius: 5;" text="SALVAR">
          <font>
             <Font name="System Bold" size="18.0" />
          </font></JFXButton>
-      <JFXButton fx:id="butSair" layoutX="389.0" layoutY="267.0" onAction="#handleSair" prefHeight="61.0" prefWidth="178.0" style="-fx-border-width: 3; -fx-border-color: BLACK; -fx-border-radius: 5;" text="SAIR">
+      <JFXButton fx:id="butSair" layoutX="270.0" layoutY="267.0" onAction="#handleSair" prefHeight="61.0" prefWidth="178.0" style="-fx-border-width: 3; -fx-border-color: BLACK; -fx-border-radius: 5;" text="SAIR">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></JFXButton>
+         
+      <JFXButton fx:id="butApagar" disable="true" layoutX="565.0" layoutY="267.0" onAction="#handleDeletar" prefHeight="61.0" prefWidth="178.0" style="-fx-border-width: 3; -fx-border-color: BLACK; -fx-border-radius: 5;" text="APAGAR">
          <font>
             <Font name="System Bold" size="18.0" />
          </font></JFXButton>
