--- a/src/com/sys/automacao/comercial/view/usuario/UsuarioListar.fxml
+++ b/src/com/sys/automacao/comercial/view/usuario/UsuarioListar.fxml
@@ -12,7 +12,7 @@
 <?import com.sys.automacao.comercial.model.* ?>
 <?import javafx.scene.control.cell.PropertyValueFactory ?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="512.0" prefWidth="752.0" style="-fx-background-color: #C0C0C0;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sys.automacao.comercial.view.UsuarioListarViewController">
+<AnchorPane fx:id="anchorPane" prefHeight="512.0" prefWidth="752.0" style="-fx-background-color: #C0C0C0;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sys.automacao.comercial.view.usuario.UsuarioListarViewController">
 	<children>
 	
 		<AnchorPane prefHeight="50.0" prefWidth="752.0" style="-fx-background-color: #C0C0C0;">
