--- a/src/com/sys/automacao/comercial/view/Principal.fxml
+++ b/src/com/sys/automacao/comercial/view/Principal.fxml
@@ -18,7 +18,7 @@
             	<Menu mnemonicParsing="false" text="Cadastro">
               		<items>
               			<MenuItem mnemonicParsing="false" onAction="#hadlerCadastroUsuario" text="Usúario" />
-                		<MenuItem mnemonicParsing="false" text="Produto" />
+                		<MenuItem mnemonicParsing="false" text="Cliente" />
               		</items>
             	</Menu>
             	<Menu mnemonicParsing="false" text="Venda">
