--- a/src/com/sys/automacao/comercial/view/cliente/ClienteListar.fxml
+++ b/src/com/sys/automacao/comercial/view/cliente/ClienteListar.fxml
@@ -12,7 +12,7 @@
 <?import com.sys.automacao.comercial.model.* ?>
 <?import javafx.scene.control.cell.PropertyValueFactory ?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="486.0" prefWidth="752.0" style="-fx-background-color: #C0C0C0;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sys.automacao.comercial.view.usuario.UsuarioListarViewController">
+<AnchorPane fx:id="anchorPane" prefHeight="486.0" prefWidth="752.0" style="-fx-background-color: #C0C0C0;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sys.automacao.comercial.view.cliente.ClienteListarViewController">
 	<children>
 	
 		<AnchorPane prefHeight="50.0" prefWidth="752.0" style="-fx-background-color: #C0C0C0;">
@@ -30,31 +30,31 @@
 			<columns>
 				<TableColumn fx:id="colId" editable="false" prefWidth="75" text="ID" visible="false" />
 
-				<TableColumn fx:id="colMatricula" editable="false" prefWidth="75" text="Matrícula" />
+				<TableColumn fx:id="colCodigo" editable="false" prefWidth="85" text="Código" />
 
-				<TableColumn fx:id="colNome" editable="false" prefWidth="250" text="Nome" />
+				<TableColumn fx:id="colNome" editable="false" prefWidth="257" text="Nome" />
+				
+				<TableColumn fx:id="colTelefone" editable="false" prefWidth="95" text="Telefone" />
 
-				<TableColumn fx:id="colEmail" editable="false" prefWidth="220" text="Email" />
+				<TableColumn fx:id="colEmail" editable="false" prefWidth="240" text="Email" />
 
 				<TableColumn fx:id="colStatus" editable="false" prefWidth="75" text="Status" />
-
-				<TableColumn fx:id="colNivel" editable="false" prefWidth="130" text="Nível" />
 
 			</columns>
 		</TableView>
 		<AnchorPane layoutY="399.0" prefHeight="80.0" prefWidth="752.0" style="-fx-background-color: #C0C0C0;">
 			<children>
-				<Button layoutX="41.2" layoutY="18.0" mnemonicParsing="false" onAction="#handleCadastrar" prefHeight="44.0" prefWidth="136.0" text="CADASTRAR">
+				<Button layoutX="41.2" layoutY="18.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="136.0" text="CADASTRAR">
 					<font>
 						<Font name="System Bold" size="14.0" />
 					</font>
 				</Button>
-				<Button layoutX="219.4" layoutY="18.0" mnemonicParsing="false" onAction="#handleAlterar" prefHeight="44.0" prefWidth="136.0" text="ALTERAR">
+				<Button layoutX="219.4" layoutY="18.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="136.0" text="ALTERAR">
 					<font>
 						<Font name="System Bold" size="14.0" />
 					</font>
 				</Button>
-				<Button layoutX="396.6" layoutY="18.0" mnemonicParsing="false" onAction="#handleDeletar" prefHeight="44.0" prefWidth="136.0" text="APAGAR">
+				<Button layoutX="396.6" layoutY="18.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="136.0" text="APAGAR">
 					<font>
 						<Font name="System Bold" size="14.0" />
 					</font>
