--- a/src/com/sys/automacao/comercial/view/cliente/Cliente.fxml
+++ b/src/com/sys/automacao/comercial/view/cliente/Cliente.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="778.0" prefWidth="1038.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane prefHeight="778.0" prefWidth="1038.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="com.sys.automacao.comercial.view.cliente.ClienteViewController">
 	<children>
 
       <Label layoutX="51.0" layoutY="31.0" text="Matricula*">
