--- a/src/com/sys/automacao/comercial/view/cliente/Cliente.fxml
+++ b/src/com/sys/automacao/comercial/view/cliente/Cliente.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="778.0" prefWidth="1038.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane fx:id="anchorPane" prefHeight="700.0" prefWidth="1038.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
 	<children>
 
       <Label layoutX="51.0" layoutY="31.0" text="Matricula*">
@@ -17,7 +17,7 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
-      <JFXTextField fx:id="tfMatricula" layoutX="51.0" layoutY="45.0" prefHeight="25.0" prefWidth="187.0" />
+      <JFXTextField fx:id="tfCodigo" layoutX="51.0" layoutY="45.0" prefHeight="25.0" prefWidth="187.0" />
       
       <Label layoutX="266.0" layoutY="29.0" text="Nome*">
          <font>
